sets up linting

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack serve",
-    "build": "webpack --mode production --progress"
+    "build": "webpack --mode production --progress",
+    "lint": "eslint --ext .js,.ts,.jsx,.tsx src",
+    "format": "npm run lint --fix & npx prettier --write \"src/**/*.{js,jsx,ts,tsx}\""
   },
   "repository": {
     "type": "git",
@@ -25,9 +27,18 @@
     "@babel/preset-typescript": "^7.18.6",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@typescript-eslint/eslint-plugin": "^5.36.1",
     "babel-loader": "^8.2.5",
     "copy-webpack-plugin": "^11.0.0",
     "core-js": "^3.25.0",
+    "eslint": "^8.23.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-standard-with-typescript": "^22.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.2.5",
+    "eslint-plugin-promise": "^6.0.1",
+    "eslint-plugin-react": "^7.31.1",
+    "prettier": "^2.7.1",
     "regenerator-runtime": "^0.13.9",
     "typescript": "^4.8.2",
     "webpack": "^5.74.0",
