--- a/package.json
+++ b/package.json
@@ -46,6 +46,9 @@
     "webpack-dev-server": "^4.10.1"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/material": "^5.10.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
