--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
-    "@mui/material": "^5.10.3",
+    "@mui/icons-material": "^5.10.6",
+    "@mui/material": "^5.10.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
