--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,18 +2,15 @@
   "compilerOptions": {
     "target": "ESNext",
     "module": "umd",
-    "lib": [
-      "ESNext",
-      "dom"
-    ],
+    "lib": ["ESNext", "dom"],
     "jsx": "react",
-    "noEmit": true,    
+    "noEmit": true,
     "sourceMap": true,
     /* Strict Type-Checking Options */
     "strict": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
-   
+
     /* Module Resolution Options */
     "moduleResolution": "node",
     "forceConsistentCasingInFileNames": true,
