--- a/public/manifest.json
+++ b/public/manifest.json
@@ -15,8 +15,7 @@
   "content_scripts": [
     {
       "js": ["content.js"],
-      "matches": ["https://cmsweb.cms.cpp.edu/*"],
-      "run_at": "document_end"
+      "matches": ["https://cmsweb.cms.cpp.edu/*"]
     }
   ]
 }
