--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,8 +17,7 @@
   },
   "plugins": ["react"],
   "rules": {
-    "@typescript-eslint/strict-boolean-expressions": 0,
-    "jsdoc/no-types": 0
+    "@typescript-eslint/strict-boolean-expressions": 0
   },
   "settings": {
     "react": {
