--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
     "@types/chrome": "^0.0.196",
+    "@types/chrome": "^0.0.196",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
@@ -50,12 +51,9 @@
     "webpack-dev-server": "^4.10.1"
   },
   "dependencies": {
-    "@azure/msal-browser": "^2.29.0",
-    "@azure/msal-react": "^1.4.8",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
-    "@mui/icons-material": "^5.11.11",
-    "@mui/material": "^5.10.6",
+    "@mui/material": "^5.10.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
