--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-n": "^15.2.5",
     "eslint-plugin-promise": "^6.0.1",
     "eslint-plugin-react": "^7.31.1",
+    "file-loader": "^6.2.0",
     "prettier": "^2.7.1",
     "regenerator-runtime": "^0.13.9",
     "typescript": "^4.8.2",
