--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-loader": "^8.2.5",
     "copy-webpack-plugin": "^11.0.0",
     "core-js": "^3.25.0",
+    "css-loader": "^6.7.3",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard-with-typescript": "^22.0.0",
@@ -42,6 +43,7 @@
     "file-loader": "^6.2.0",
     "prettier": "^2.7.1",
     "regenerator-runtime": "^0.13.9",
+    "style-loader": "^3.3.1",
     "typescript": "^4.8.2",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
@@ -52,8 +54,8 @@
     "@azure/msal-react": "^1.4.8",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
-    "@mui/material": "^5.10.6",
     "@mui/icons-material": "^5.10.14",
+    "@mui/material": "^5.10.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
