--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,5 @@
     "forceConsistentCasingInFileNames": true,
     "esModuleInterop": true
   },
-  "include": ["src", "src/Index.tsx", "types/import-gif.d.ts"]
+  "include": ["src", "src/Index.tsx", "types/import-gif.d.ts", "types"]
 }
