--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
   "description": "A Chrome Extension for BroncoDirect to be used by Cal Poly Pomona students.",
   "version": "1.0.2",
   "manifest_version": 2,
-  "action": {
+  "browser_action": {
     "default_popup": "index.html",
     "default_icon": {
       "16": "/images/icon.png",
