--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@mui/icons-material": "^5.14.0",
     "@mui/material": "^5.10.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
