--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint-plugin-n": "^15.2.5",
     "eslint-plugin-promise": "^6.0.1",
     "eslint-plugin-react": "^7.31.1",
+    "exports-loader": "^4.0.0",
     "prettier": "^2.7.1",
     "regenerator-runtime": "^0.13.9",
     "style-loader": "^3.3.2",
@@ -50,10 +51,14 @@
     "webpack-dev-server": "^4.10.1"
   },
   "dependencies": {
+    "@azure/msal-browser": "^2.38.0",
+    "@azure/msal-react": "^1.5.9",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.14.0",
     "@mui/material": "^5.10.3",
+    "msal": "^1.4.18",
+    "msalx": "^0.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
