--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,7 +17,8 @@
   },
   "plugins": ["react"],
   "rules": {
-    "@typescript-eslint/strict-boolean-expressions": 0
+    "@typescript-eslint/strict-boolean-expressions": 0,
+    "require-jsdoc": 0
   },
   "settings": {
     "react": {
