Adds the actual useful msal dependency for ListItem.tsx

--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "webpack-dev-server": "^4.10.1"
   },
   "dependencies": {
+    "@azure/msal-browser": "^2.38.0",
+    "@azure/msal-react": "^1.5.9",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.14.0",
