Frontend Mega Merge [main <- megaMerge] (#128)
* adds MUI package

* removes eslint strict boolean expressions rule

* adds content script (#16)

* adds more detailed info around BroncoDirectMe

* Adds headings for all relevant features posted 2022/09/18

* initial commit

* Adds information about features and adds features based on github issues

* implemented lint action (#19)

implemented lint action and fixed linting errors

* List item component

* dictionary array and render component

* Leaf/leaversa/professor info popup (#24)

* adds logic to get professor elements

* chaning content.ts to content.tsx

* implemented popup in barebones state

* refactored content.tsx

* comments on ProfessorPopup.tsx

* type checking for props

* fix to use innerText instead of innerHTML

* implemented filter for professor names

* removed unecessary import

* Updated .gitignore (#20)

* Prettier fomatting

* Reworked Data Types to Remove "any"

* Implements toggle button (#29)

* Implements toggle button

* Prettier formatting changes

* More Prettier changes from default files

* Updated formatting using ESLint

* Pulled list and fixed merge conflict

* Prettier changes to App.tsx

Co-authored-by: Katie <14coxkm@gmail.com>

* Fixes Linting Issue (#47)

Fixes linting errors

* Leaf/blake/identify broncodirect page (#36)

* Identify BroncoDirect Page, Class Search, Search Results Pages

* Fixed Console Log Formatting Edits

* Additional Edits to Fix Merging

* Update Content.tsx

* Prettier Readme.md Fix

* Update src/Content.tsx

Co-authored-by: Matthew Kwong <mtkwong@cpp.edu>

* Update Content.tsx

* Identify page by title, not list of professors. Reset manifest.json

* Added documentation

* Added Documentation with signing key

* Verified Commit Test

* Verified Commit Test 2

* Linting Issues

* Update Content.tsx

Co-authored-by: Matthew Kwong <mtkwong@cpp.edu>

* Leaf/

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,5 @@
     "forceConsistentCasingInFileNames": true,
     "esModuleInterop": true
   },
-  "include": ["src", "src/Index.tsx"]
+  "include": ["src", "src/Index.tsx", "types/import-gif.d.ts", "types"]
 }
