--- a/package.json
+++ b/package.json
@@ -7,19 +7,19 @@
     "dev": "webpack serve",
     "build": "webpack --mode production --progress",
     "lint": "eslint --ext .js,.ts,.jsx,.tsx src",
-    "format": "npm run lint --fix & npx prettier --write \"src/**/*.{js,jsx,ts,tsx}\""
+    "format": "npm run lint --fix"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ZombiMigz/BroncoDirectMe.git"
+    "url": "git+https://github.com/BroncoDirectMe/Frontend.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/ZombiMigz/BroncoDirectMe/issues"
+    "url": "https://github.com/BroncoDirectMe/Frontend/issues"
   },
-  "homepage": "https://github.com/ZombiMigz/BroncoDirectMe#readme",
+  "homepage": "https://github.com/BroncoDirectMe/Frontend#readme",
   "devDependencies": {
     "@babel/core": "^7.18.13",
     "@babel/preset-env": "^7.18.10",
@@ -32,24 +32,30 @@
     "babel-loader": "^8.2.5",
     "copy-webpack-plugin": "^11.0.0",
     "core-js": "^3.25.0",
+    "css-loader": "^6.7.3",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard-with-typescript": "^22.0.0",
     "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsdoc": "^46.0.0",
     "eslint-plugin-n": "^15.2.5",
     "eslint-plugin-promise": "^6.0.1",
     "eslint-plugin-react": "^7.31.1",
     "prettier": "^2.7.1",
     "regenerator-runtime": "^0.13.9",
+    "style-loader": "^3.3.2",
     "typescript": "^4.8.2",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.10.1"
   },
   "dependencies": {
+    "@azure/msal-browser": "^2.37.1",
+    "@azure/msal-react": "^1.4.8",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
-    "@mui/material": "^5.10.3",
+    "@mui/icons-material": "^5.11.11",
+    "@mui/material": "^5.10.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
