--- a/package.json
+++ b/package.json
@@ -56,7 +56,9 @@
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.10.6",
+    "elkjs": "^0.8.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "reactflow": "^11.9.3"
   }
 }
