--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.10.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.47.0"
   }
 }
